[tool.poetry]
name = "scrapetools"
version = "0.1.0"
description = ""
authors = ["Jonathan Cutrer <joncutrer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.83.0"
beautifulsoup4 = "^4.9.3"
python-box = "^5.3.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
